# semcast

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
examples/: complaints.rs  meetings.rs
src/: error.rs  lib.rs  telemetry.rs
src/cache/: mod.rs
src/index/: chunk.rs  lance.rs  mod.rs  registry.rs
src/logical/: mod.rs  sem_extract.rs  sem_filter.rs
src/model/: anthropic.rs  mock.rs  mod.rs  ollama.rs  voyage.rs
src/optimizer/: calibrate.rs  extract.rs  funnel.rs  mod.rs  rewrite.rs
src/physical/: extract.rs  index_scan.rs  mod.rs  planner.rs  trace.rs  verify.rs
src/server/: encode.rs  engine.rs  handler.rs  mod.rs  progress.rs  router.rs
src/sql/: ddl.rs  dialect.rs  extract_udf.rs  means_udf.rs  mod.rs  recall.rs  typed.rs
src/types/: mod.rs  registry.rs
tests/: extract.rs  index.rs  ingest.rs  live_ollama.rs  live_voyage.rs  means.rs  retry.rs  server.rs  smoke.rs
